Integrate Apex load tenders into FreightBridge
